tdf#105101 check scale to determine subtype

For computed decimal/numeric values firebird's subtype remains 0. In
this case we check for the scale of column. If it is not 0 (negative),
than imply numeric.

Change-Id: Ie5a023d165852fe402b3b4cac817b0bbef58e7cd